--- a/css/Zuri-Article.css
+++ b/css/Zuri-Article.css
@@ -1,10 +1,12 @@
 body {
     text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 135%;
 }
-section {
-    font-size: larger;
+header {
+    
 }
 .button {
     background-color: #106080;
