--- a/css/Zuri-Article.css
+++ b/css/Zuri-Article.css
@@ -26,10 +26,15 @@ header {
     font-size: 150%;
     margin-bottom: 5px;
 }
-/* #figma {
-    color: #2e2eff;
+cite {
+    font-weight: 200;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.ulinks {
+    color: #000094;
     text-decoration: none;
-} */
+}
 #hopeDBest {
     font-family: 'Pacifico', cursive;
     margin-top: 20%;
