--- a/css/Zuri-Article.css
+++ b/css/Zuri-Article.css
@@ -88,3 +88,15 @@ footer a{
         font-size: 135%;
     }
 }
+@media screen and (min-width: 600px) {
+    body {
+        margin-left: 12%;
+        margin-right: 12%;
+        font-size: 110%;
+    }
+    iframe {
+        width: 100%;
+        height: auto;
+        min-height: 285px;
+    }
+}
